<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ImageView
        android:id="@+id/ivNoInternet"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:src="@drawable/no_internet"
        android:layout_centerVertical="true"
        android:layout_height="@dimen/_250sdp"
        tools:ignore="ContentDescription" />
    <com.mindorks.placeholderview.SwipePlaceHolderView
        android:id="@+id/swipeView"
        android:layout_margin="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </RelativeLayout>
</layout>