<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/mainCard"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        app:cardBackgroundColor="@color/white"
        >


            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/app_logo"
                tools:ignore="ContentDescription" />




    </androidx.cardview.widget.CardView>


</layout>